feat(EUDI-063/064/065): SaaS multi-tenant Issuer — v3.1.0 (#55)
* feat(EUDI-063): implement schema-per-tenant data isolation

Replace single-schema RLS with PostgreSQL schema-per-tenant:

Database:
- V1__Public_schema.sql: tenant_registry with seed (platform, sandbox, dome, kpmg)
- Per-tenant migrations: issuance, tenant_config, tenant_credential_profile,
  tenant_signing_config, status_list, status_list_index
- TenantSchemaFlywayMigrator: migrates public + N tenant schemas at startup

Connection isolation:
- TenantAwareConnectionFactoryDecorator: SET search_path TO <tenant>, public
  with whitelist validation against tenant_registry
- Issuance entity and queries: remove "issuer." schema prefix

Multi-tenant operations:
- sysAdmin queries iterate tenant schemas via TenantRegistryService
- 3 schedulers iterate tenant schemas instead of wildcard "*"
- TenantRegistryService with Caffeine cache (5 min TTL)

Cleanup:
- Remove credentialSubjectDidKey (dead code) from IssuerIdentityProperties,
  AppConfig, IssuerProperties, application.yml
- Remove FlywayConfig (replaced by TenantSchemaFlywayMigrator)
- Flyway default-schema changed from issuer to public

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix(EUDI-063): IssuerBaseUrlWebFilter reads from transformed URI

ForwardedHeaderTransformer consumes X-Forwarded-Host header and rewrites
the request URI. The filter was checking for the already-consumed header
and falling back to APP_URL. Now reads the transformed URI directly,
which correctly reflects the public-facing hostname including tenant.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* feat(EUDI-063): add TenantConfigService for per-tenant config from DB

- TenantConfig entity + TenantConfigRepository (key-value in tenant schema)
- TenantConfigService reads config from tenant_config table via search_path
- CredentialOfferServiceImpl: wallet URL read from DB with fallback to env var
- Keys use service prefix conventio